# multipersistence_nix

./: .gitignore  README.md  benchmark_delaunay_core.py  benchmark_results.txt  build_mpfree.sh  build_rhomboidtiling.sh  generate_plots.py  pyproject.toml  run_benchmarks.py  shell.nix  utils.py
plots/: delaunay_core_signed_measure_0.eps  delaunay_core_signed_measure_1.eps  new_delaunay_core_signed_measure_2.eps  new_point_cloud_0.eps  new_point_cloud_1.eps  new_point_cloud_2.eps  new_unsliced_rhomboid_tiling_signed_measure_1.eps  new_unsliced_rhomboid_tiling_signed_measure_2.eps  unsliced_rhomboid_tiling_signed_measure_0.eps
results/: benchmark_results.txt  delaunay_core_benchmark_results.txt
temp_rhomboid_tiling/: points.txt
