[project]
name = "multipersistence-nix"
version = "0.1.0"
description = "Environment for comparing the Delaunay Core and the Rhomboid Tiling bifiltrations."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "multipers>=2.3.4",
    "shapely>=2.1.1",
    "tadasets>=0.2.1",
]
